k8s/results-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: results
spec:
  selector:
    app: results
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001
