k8s/voting-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting
spec:
  selector:
    app: voting
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
