k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: vote.local
    http:
      paths:
      - path: /vote/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: voting
            port:
              number: 5000
      - path: /results/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: results
            port:
              number: 5001
